--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Photoekl</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-<h1>PHOTOEKL</h1>
-<p>This is the photography of Erika Lam</p>
+		<h1>PHOTOEKL</h1>
+		<h4>This is the photography of erika lam.</h4>
+		<p>A collection of photos from the places she's been to. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
 </body>
 </html>
