--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -5,10 +5,34 @@
 	<title>Photoekl</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
+<div id="container">
+<header>
+<h1> <a href="photoekl.com">Photoekl</a></h1>
+<p id="slogan">Every photo has a story.</p>
+<ul class="nav">
+	<li><a href="places.html">Places</a></li>
+	<li><a href="people.html">People</a></li>
+	<li><a href="product.html">Product</a></li>
+	<li><a href="http://erikalam.com/">Design</a></li>
+</ul>
+</header>
 <body>
-		<h1>PHOTOEKL</h1>
-		<h4>This is the photography of erika lam.</h4>
-		<p>A collection of photos from the places she's been to. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+
+ <!-- Each image is 350px by 233px -->
+<div class="photos">
+	<div><img src="media/yosemite01.jpg" alt="yosemite" style='width:auto;' class="responsive-image" title="Lower Yosemite Falls"></div>
+	<div><img src="media/kristina.jpg" alt="kristina" title="Photo of Kristina"></div>
+	<div><img src="media/roadtrip01.jpg" alt="roadtrip01" title="Cross Country Road Trip"></div>
+	<div><img src="media/yosemite03.jpg" alt="yosemite03" title="Yosemite"></div>
+	<div><img src="media/nyla.jpg" alt="nyla" title="Shiba Inu Nyla Lam"></div>
+	<div><img src="media/yosemite02.jpg" alt="yosemite02" title="Yosemite Falls"></div>
+</div>
 </body>
+<div class="social">
+<nav>
+		<a href="https://www.instagram.com/photoekl/" target="_blank">Instagram</a>
+		<a href="https://twitter.com/erikalam_" target="_blank">Twitter</a>
+		<a href="https://www.linkedin.com/in/eklam/" target="_blank">LinkedIn</a>	
+</nav></div>
+</div>
 </html>
