--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -7,7 +7,7 @@
 </head>
 <div id="container">
 <header>
-<h1> <a href="photoekl.com">Photoekl</a></h1>
+<h1> <a href="index.html">Photoekl</a></h1>
 <p id="slogan">Every photo has a story.</p>
 <ul class="nav">
 	<li><a href="places.html">Places</a></li>
