--- a/unit_1/places.html
+++ b/unit_1/places.html
@@ -5,34 +5,30 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <header>
-<h1><a href="index.html">Photoekl</a></h1>
-<h4>This is the photography of erika lam.</h4>
-<nav>
-<a href="https://www.instagram.com/photoekl/">Instagram</a>
-<a href="https://twitter.com/erikalam_">Twitter</a>
-<a href="https://www.linkedin.com/in/eklam/">LinkedIn</a>
-</nav>
+<h1> <a href="index.html">Photoekl</a></h1>
+<p id="slogan">Every photo has a story.</p>
+<ul class="nav">
+	<li><a href="places.html">Places</a></li>
+	<li><a href="people.html">People</a></li>
+	<li><a href="product.html">Product</a></li>
+	<li><a href="http://erikalam.com/">Design</a></li>
+</ul>
 </header>
-<main>
-<aside id="sidebar">
-<a href="places.html">Places</a>
-<br>
-<a href="people.html">People</a>
-<br>
-<a href="product.html">Product</a>
-<br>
-<a href="http://erikalam.com/">Design</a>
-</aside>
+
 <body>
-	<p>A collection of photos from the places she's been to.</p>
-</body>
-<section id="photos">
-<figure class="photo">
+<div class="photos">
+<div>
 <img src="media/yosemite01.jpg">
 <figcaption>Lower Yosemite Falls</figcaption>
-<img src="media/peru01.jpg">
+<div><img src="media/peru01.jpg">
 <figcaption>Machu Pichu</figcaption>
-</figure>
-</section>
-</main>
+</body>
+
+<div class="social">
+<nav>
+		<a href="https://www.instagram.com/photoekl/" target="_blank">Instagram</a>
+		<a href="https://twitter.com/erikalam_" target="_blank">Twitter</a>
+		<a href="https://www.linkedin.com/in/eklam/" target="_blank">LinkedIn</a>	
+</nav></div>
+</div>
 </html>
