--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Photoekl</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Assistant:200" rel="stylesheet">
 </head>
 <div id="container">
 <header>
@@ -16,8 +17,15 @@
 	<li><a href="http://erikalam.com/">Design</a></li>
 </ul>
 </header>
+</div>
 <body>
-
+<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</p>
  <!-- Each image is 350px by 233px -->
 <div class="photos">
 	<div><img src="media/yosemite01.jpg" alt="yosemite" style='width:auto;' class="responsive-image" title="Lower Yosemite Falls"></div>
@@ -28,11 +36,9 @@
 	<div><img src="media/yosemite02.jpg" alt="yosemite02" title="Yosemite Falls"></div>
 </div>
 </body>
-<div class="social">
-<nav>
+<nav><div class="social">
 		<a href="https://www.instagram.com/photoekl/" target="_blank">Instagram</a>
 		<a href="https://twitter.com/erikalam_" target="_blank">Twitter</a>
 		<a href="https://www.linkedin.com/in/eklam/" target="_blank">LinkedIn</a>	
-</nav></div>
-</div>
+</div></nav>
 </html>
