--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -25,7 +25,7 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
+</p><
  <!-- Each image is 350px by 233px -->
 <div class="photos">
 	<div><img src="media/yosemite01.jpg" alt="yosemite" style='width:auto;' class="responsive-image" title="Lower Yosemite Falls"></div>
@@ -35,10 +35,10 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	<div><img src="media/nyla.jpg" alt="nyla" title="Shiba Inu Nyla Lam"></div>
 	<div><img src="media/yosemite02.jpg" alt="yosemite02" title="Yosemite Falls"></div>
 </div>
-</body>
-<nav><div class="social">
+
+<ul class="social">
 		<a href="https://www.instagram.com/photoekl/" target="_blank">Instagram</a>
 		<a href="https://twitter.com/erikalam_" target="_blank">Twitter</a>
 		<a href="https://www.linkedin.com/in/eklam/" target="_blank">LinkedIn</a>	
-</div></nav>
+</ul>
 </html>
