--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -18,7 +18,7 @@
 		<a href="https://www.linkedin.com/in/eklam/" target="_blank">LinkedIn</a>	
 </ul>
 </nav>
-
+<main>
 <section id="one">
 
 <aside class="nav">
@@ -45,6 +45,8 @@
 	<figure><img src="media/yosemite02.jpg" alt="yosemite02" title="Yosemite Falls"></figure>
 	<figcaption class="description"></figcaption>
 </div>
+</section>
+</main>
 
 <footer>&copy;Erika Lam</footer>
 
