--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -10,8 +10,9 @@
 <body>
 <div id="container">
 <header>
+<!--<img id="logo" title="Return to the homepage"src="media/photoekl-logo.png"/>-->
 <h1> <a href="index.html">Photoekl</a></h1>
-<h2>Every photo has a story.</h2>
+<h3>Every photo has a story.</h3>
 </header>
 <nav>
 <ul class="social">
