--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
 
-      <link rel="stylesheet" href="CSS/site.css">
+      <link rel="stylesheet" href="css/site.css">
 
 
 </head>
