--- a/unit_10/visualdesign.html
+++ b/unit_10/visualdesign.html
@@ -21,7 +21,7 @@
   <header>
   <a href="index.html" id="logo">
     <!--<img src="media/erika-logo.png" alt="" id="logo-image">-->
-    <h1>ERIKA LA</h1>
+    <h1>ERIKA LAM</h1>
     <h2><font color="blue">Visual Design</font></h2>
   </a>
   <nav>
