--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -61,16 +61,8 @@
         </SCRIPT>
         <a href="#" value="Enter Protected Area" onClick="passWord()">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-01.jpg" alt="">
-          <h4>Admin Hub</h4>
-          <p>Built out an internal CMS for The Dedham Group. Conducted user research, user interviews & tests, and....
-          </p>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-02.jpg" alt="">
-          <h4>Logo and brand development for individuals and companies.</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <h4>UX</h4>
+          <p>Built out an internal CMS for The Dedham Group. Conducted user research, user interviews & tests, prototying, wireframes to high fidelity prototypes.
           </p>
         </a>
       </li>
@@ -84,7 +76,7 @@
         history.go(-1);
         if (pass1.toLowerCase() == "letmein") {
         alert('You Got it Right!');
-        window.open('coding.html');
+        window.open('uxdesign.html');
         break;
         }
         testV+=1;
@@ -92,23 +84,14 @@
         prompt('Access Denied - Password Incorrect, Please contact eklaminfo@gmail for permission.','Password');
         }
         if (pass1.toLowerCase()!="password" & testV ==3)
-        history.go(1);
+        history.go(-1);
         return " ";
         }
         </SCRIPT>
-
-        <a href="#" value="Enter Protected Area" onClick="passWord()">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-06.jpg" alt="">
-          <h4>HTML & CSS</h4>
+        <a href="#">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-02.jpg" alt="">
+          <h4>UX (separate project)</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </a>
-      </li>
-      <li>
-        <a href="uxdesign.html">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-09.jpg" alt="">
-          <h4>Product Design and Data Viz</h4>
-          <p>Analyze qualitative data sets and implement into analytics tool for clients in the pharmaceutical and oncology space.
           </p>
         </a>
       </li>
@@ -134,20 +117,77 @@
         return " ";
         }
         </SCRIPT>
-        <a href="visualdesign.html" value="Enter Protected Area" onClick="passWord()">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-12.jpg" alt="">
-          <h4>UI & Visual Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <a href="#" value="Enter Protected Area" onClick="passWord()">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-06.jpg" alt="">
+          <h4>UI / Visual / Web Design</h4>
+          <p>Everything from components I've helped design to product package designs.
           </p>
         </a>
       </li>
       <li>
-        <a href="uxdesign.html">
+        <SCRIPT>
+        function passWord() {
+        var testV = 1;
+        var pass1 = prompt('Please Enter Your Password',' ');
+        while (testV < 3) {
+        if (!pass1)
+        history.go(-1);
+        if (pass1.toLowerCase() == "letmein") {
+        alert('You Got it Right!');
+        window.open('dataviz.html');
+        break;
+        }
+        testV+=1;
+        var pass1 =
+        prompt('Access Denied - Password Incorrect, Please contact eklaminfo@gmail for permission.','Password');
+        }
+        if (pass1.toLowerCase()!="password" & testV ==3)
+        history.go(1);
+        return " ";
+        }
+        </SCRIPT>
+        <a href="dataviz.html">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-09.jpg" alt="">
+          <h4>Data Visualization</h4>
+          <p>Projects with taking data and applying UX and UI strategies to assist with great user experiences.
+          </p>
+        </a>
+      </li>
+      <li>
+        <SCRIPT>
+        function passWord() {
+        var testV = 1;
+        var pass1 = prompt('Please Enter Your Password',' ');
+        while (testV < 3) {
+        if (!pass1)
+        history.go(-1);
+        if (pass1.toLowerCase() == "letmein") {
+        alert('You Got it Right!');
+        window.open('coding.html');
+        break;
+        }
+        testV+=1;
+        var pass1 =
+        prompt('Access Denied - Password Incorrect, Please contact eklaminfo@gmail for permission.','Password');
+        }
+        if (pass1.toLowerCase()!="password" & testV ==3)
+        history.go(1);
+        return " ";
+        }
+        </SCRIPT>
+        <a href="coding.html" value="Enter Protected Area" onClick="passWord()">
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-12.jpg" alt="">
+          <h4>HTML & CSS</h4>
+          <p>Coding project I've worked on.
+          </p>
+        </a>
+      </li>
+      <li>
+        <a href="coding.html" value="Enter Protected Area" onClick="passWord(letmein)">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-12.jpg" alt="">
           <h4>Personal: Photos and side projects.</h4>
           <p>Photography is an art that constantly attempts to capture what we see before our eyes and share it with the world. We see something stunning, take a snapshot of it, and if it’s not quite what we anticipated, we will edit to make it as perfect as it was before our eyes. Looking at life through a camera lens can provide the opportunity to see the world as we want to see it, and for such a device to give someone the ability to do that is powerful.
           </p>
-
         </a>
       </li>
     </ul>
