organized pages with correct links

--- a/unit_10/dataviz.html
+++ b/unit_10/dataviz.html
@@ -22,7 +22,7 @@
   <a href="index.html" id="logo">
     <!--<img src="media/erika-logo.png" alt="" id="logo-image">-->
     <h1>ERIKA LAM</h1>
-    <h2><font color="blue">UX Design Projects</font></h2>
+    <h2><font color="blue">Data Visuzliation</font></h2>
   </a>
   <nav>
     <ul>
@@ -33,11 +33,11 @@
 
 <div id="wrapper">
   <section id="primary">
-      <img id="profile-photo" src="media/erika.jpg" alt="">
+      <img id="profile-photo" src="" alt="">
   </section>
   <section id="secondary">
-    <p class="about"><i>New York, NY</i></p>
-    <h3>UX/UI Designer at <a href="http://pulsedigital.io">Pulse Digital</a></h3>
+    <p class="about"><i>Colors</i></p>
+    <h3>Graphs</a></h3>
     <p class="about">I'm a designer passionate about the intersection of user research, brand strategy and design. I love taking discoveries from interviews, testing, and research, and translating them into ideas that make for more usable and engaging experiences.
 
 Through planning, research, critical thinking, and lots of hard work, I always follow through with an idea and am only satisfied when executed well.
