--- a/unit_10/uxdesign.html
+++ b/unit_10/uxdesign.html
@@ -33,7 +33,7 @@
 
 <div id="wrapper">
   <section id="primary">
-      <img id="profile-photo" src="media/erika.jpg" alt="">
+      <img id="profile-photo" src="" alt="">
   </section>
   <section id="secondary">
     <p class="about"><i>New York, NY</i></p>
