--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-
+<!--Nav -->
   <header>
     <a href="index.html" id="logo">
       <!--<img src="media/erika-logo.png" alt="" id="logo-image">-->
@@ -33,10 +33,11 @@
     </ul>
   </nav>
 </header>
-
 <div id="wrapper">
   <section>
     <ul id="gallery" .="portfolio">
+
+<!--UX Project -->
       <li>
         <SCRIPT>
         function passWord() {
@@ -66,6 +67,8 @@
           </p>
         </a>
       </li>
+
+<!--UX Project -->
       <li>
         <SCRIPT>
         function passWord() {
@@ -95,6 +98,8 @@
           </p>
         </a>
       </li>
+
+<!--UI/Visual Design Project -->
       <li>
         <SCRIPT>
         function passWord() {
@@ -124,6 +129,8 @@
           </p>
         </a>
       </li>
+
+<!--Data Visualization -->
       <li>
         <SCRIPT>
         function passWord() {
@@ -153,6 +160,8 @@
           </p>
         </a>
       </li>
+
+<!--HTML & Coding-->
       <li>
         <SCRIPT>
         function passWord() {
@@ -182,16 +191,21 @@
           </p>
         </a>
       </li>
+
+<!--Personal Projects
       <li>
-        <a href="coding.html" value="Enter Protected Area" onClick="passWord(letmein)">
+        <a href="" value="Enter Protected Area" onClick="passWord(letmein)">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-12.jpg" alt="">
           <h4>Personal: Photos and side projects.</h4>
           <p>Photography is an art that constantly attempts to capture what we see before our eyes and share it with the world. We see something stunning, take a snapshot of it, and if it’s not quite what we anticipated, we will edit to make it as perfect as it was before our eyes. Looking at life through a camera lens can provide the opportunity to see the world as we want to see it, and for such a device to give someone the ability to do that is powerful.
           </p>
         </a>
       </li>
+    -->
     </ul>
   </section>
+
+  
   <footer>
     <a href="https://twitter.com/erikalam_"><img src="icons/tw.svg" alt="Twitter Logo" class="social-icon" target="_blank"></a>
     <a href="https://instagram.com/photoekl"><img src="icons/ig.svg" alt="ig Logo" class="social-icon" target="_blank"></a>
