--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -57,10 +57,10 @@
         }
         if (pass1.toLowerCase()!="password" & testV ==3)
         history.go(-1);
-        return " ";
+        return "uxdesign.html ";
         }
         </SCRIPT>
-        <a href="#" value="Enter Protected Area" onClick="passWord()">
+        <a href="uxdesign.html" value="Enter Protected Area" onClick="passWord('uxdesign.html')">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-01.jpg" alt="">
           <h4>UX</h4>
           <p>Built out an internal CMS for The Dedham Group. Conducted user research, user interviews & tests, prototying, wireframes to high fidelity prototypes.
@@ -122,7 +122,7 @@
         return " ";
         }
         </SCRIPT>
-        <a href="#" value="Enter Protected Area" onClick="passWord()">
+        <a href="visualdesign.html">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-06.jpg" alt="">
           <h4>UI / Visual / Web Design</h4>
           <p>Everything from components I've helped design to product package designs.
@@ -184,7 +184,7 @@
         return " ";
         }
         </SCRIPT>
-        <a href="coding.html" value="Enter Protected Area" onClick="passWord()">
+        <a href="coding.html">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-12.jpg" alt="">
           <h4>HTML & CSS</h4>
           <p>Coding project I've worked on.
@@ -205,7 +205,7 @@
     </ul>
   </section>
 
-  
+
   <footer>
     <a href="https://twitter.com/erikalam_"><img src="icons/tw.svg" alt="Twitter Logo" class="social-icon" target="_blank"></a>
     <a href="https://instagram.com/photoekl"><img src="icons/ig.svg" alt="ig Logo" class="social-icon" target="_blank"></a>
