updates to construction page

--- a/unit_10/visualdesign.html
+++ b/unit_10/visualdesign.html
@@ -40,7 +40,7 @@
   </section>
   <section id="pictures">
     <ul>
-    <li><img id="" src="media/quality-old.png" alt=""></li>
+    <li><img id="" src="" alt=""></li>
   </ul>
 </section>
   <footer>
