--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -17,11 +17,13 @@
 
 </head>
 
-<body>
+<body id="construction-container">
 <!--Nav -->
+
+
   <header>
     <a href="index.html" id="logo">
-      <!--<img src="media/erika-logo.png" alt="" id="logo-image">-->
+      <img src="media/erika-logo.png" alt="" id="logo-image">
       <h1>Erika Lam</h1>
       <h2>UX/UI Designer</h2>
     </a>
@@ -33,187 +35,19 @@
     </ul>
   </nav>
 </header>
-<div id="wrapper">
-  <section>
-    <ul id="gallery" .="portfolio">
+  <section id="construction">
+          <h1>Portfolio coming soon</h1>
+              <p>If needed, you need to you can always <a href="mailto:#">contact me</a> here.</p>
+              <p>&mdash; Erika</p>
+</section>
 
-<!--UX Project -->
-      <li>
-        <SCRIPT>
-        function passWord() {
-        var testV = 1;
-        var pass1 = prompt('Please Enter Your Password',' ');
-        while (testV < 3) {
-        if (!pass1)
-        history.go(-1);
-        if (pass1.toLowerCase() == "letmein") {
-        alert('You Got it Right!');
-        window.open('uxdesign.html');
-        break;
-        }
-        testV+=1;
-        var pass1 =
-        prompt('Access Denied - Password Incorrect, Please contact eklaminfo@gmail for permission.','Password');
-        }
-        if (pass1.toLowerCase()!="password" & testV ==3)
-        history.go(-1);
-        return "uxdesign.html ";
-        }
-        </SCRIPT>
-        <a href="uxdesign.html" value="Enter Protected Area" onClick="passWord('uxdesign.html')">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-01.jpg" alt="">
-          <h4>UX</h4>
-          <p>Built out an internal CMS for The Dedham Group. Conducted user research, user interviews & tests, prototying, wireframes to high fidelity prototypes.
-          </p>
-        </a>
-      </li>
-
-<!--UX Project -->
-      <li>
-        <SCRIPT>
-        function passWord() {
-        var testV = 1;
-        var pass1 = prompt('Please Enter Your Password',' ');
-        while (testV < 3) {
-        if (!pass1)
-        history.go(-1);
-        if (pass1.toLowerCase() == "letmein") {
-        alert('You Got it Right!');
-        window.open('uxdesign.html');
-        break;
-        }
-        testV+=1;
-        var pass1 =
-        prompt('Access Denied - Password Incorrect, Please contact eklaminfo@gmail for permission.','Password');
-        }
-        if (pass1.toLowerCase()!="password" & testV ==3)
-        history.go(-1);
-        return " ";
-        }
-        </SCRIPT>
-        <a href="#">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-02.jpg" alt="">
-          <h4>UX (separate project)</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </a>
-      </li>
-
-<!--UI/Visual Design Project -->
-      <li>
-        <SCRIPT>
-        function passWord() {
-        var testV = 1;
-        var pass1 = prompt('Please Enter Your Password',' ');
-        while (testV < 3) {
-        if (!pass1)
-        history.go(-1);
-        if (pass1.toLowerCase() == "letmein") {
-        alert('You Got it Right!');
-        window.open('visualdesign.html');
-        break;
-        }
-        testV+=1;
-        var pass1 =
-        prompt('Access Denied - Password Incorrect, Please contact eklaminfo@gmail for permission.','Password');
-        }
-        if (pass1.toLowerCase()!="password" & testV ==3)
-        history.go(1);
-        return " ";
-        }
-        </SCRIPT>
-        <a href="visualdesign.html">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-06.jpg" alt="">
-          <h4>UI / Visual / Web Design</h4>
-          <p>Everything from components I've helped design to product package designs.
-          </p>
-        </a>
-      </li>
-
-<!--Data Visualization -->
-      <li>
-        <SCRIPT>
-        function passWord() {
-        var testV = 1;
-        var pass1 = prompt('Please Enter Your Password',' ');
-        while (testV < 3) {
-        if (!pass1)
-        history.go(-1);
-        if (pass1.toLowerCase() == "letmein") {
-        alert('You Got it Right!');
-        window.open('dataviz.html');
-        break;
-        }
-        testV+=1;
-        var pass1 =
-        prompt('Access Denied - Password Incorrect, Please contact eklaminfo@gmail for permission.','Password');
-        }
-        if (pass1.toLowerCase()!="password" & testV ==3)
-        history.go(1);
-        return " ";
-        }
-        </SCRIPT>
-        <a href="dataviz.html">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-09.jpg" alt="">
-          <h4>Data Visualization</h4>
-          <p>Projects with taking data and applying UX and UI strategies to assist with great user experiences.
-          </p>
-        </a>
-      </li>
-
-<!--HTML & Coding-->
-      <li>
-        <SCRIPT>
-        function passWord() {
-        var testV = 1;
-        var pass1 = prompt('Please Enter Your Password',' ');
-        while (testV < 3) {
-        if (!pass1)
-        history.go(-1);
-        if (pass1.toLowerCase() == "letmein") {
-        alert('You Got it Right!');
-        window.open('coding.html');
-        break;
-        }
-        testV+=1;
-        var pass1 =
-        prompt('Access Denied - Password Incorrect, Please contact eklaminfo@gmail for permission.','Password');
-        }
-        if (pass1.toLowerCase()!="password" & testV ==3)
-        history.go(1);
-        return " ";
-        }
-        </SCRIPT>
-        <a href="coding.html">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-12.jpg" alt="">
-          <h4>HTML & CSS</h4>
-          <p>Coding project I've worked on.
-          </p>
-        </a>
-      </li>
-
-<!--Personal Projects
-      <li>
-        <a href="" value="Enter Protected Area" onClick="passWord(letmein)">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/25480/numbers-12.jpg" alt="">
-          <h4>Personal: Photos and side projects.</h4>
-          <p>Photography is an art that constantly attempts to capture what we see before our eyes and share it with the world. We see something stunning, take a snapshot of it, and if it’s not quite what we anticipated, we will edit to make it as perfect as it was before our eyes. Looking at life through a camera lens can provide the opportunity to see the world as we want to see it, and for such a device to give someone the ability to do that is powerful.
-          </p>
-        </a>
-      </li>
-    -->
-    </ul>
-  </section>
-
-
+<!--
   <footer>
     <a href="https://twitter.com/erikalam_"><img src="icons/tw.svg" alt="Twitter Logo" class="social-icon" target="_blank"></a>
     <a href="https://instagram.com/photoekl"><img src="icons/ig.svg" alt="ig Logo" class="social-icon" target="_blank"></a>
     <p>&copy; 2018 Erika Lam</p>
   </footer>
-</div>
-
-
+-->
 
 </body>
 
