--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -35,12 +35,14 @@
     </ul>
   </nav>
 </header>
+<div id="wrapper">
   <section id="construction">
-          <h1>Portfolio coming soon</h1>
-              <p>If needed, you need to you can always <a href="mailto:#">contact me</a> here.</p>
-              <p>&mdash; Erika</p>
+          <h1>UX/UI Designer with a passion about the intersection of user research, brand strategy and design.</h1>
+          <h2>Portfolio Coming <strong>Soon</strong></h2>
+              <p>I’ll be back soon with new work to share! In the meantime, if you'd like to chat or work together, feel free to contact me <a href="mailto:#">here</a>.</p>
+            <!--  <p>&mdash; Erika</p>-->
 </section>
-
+</div>
 <!--
   <footer>
     <a href="https://twitter.com/erikalam_"><img src="icons/tw.svg" alt="Twitter Logo" class="social-icon" target="_blank"></a>
