--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -37,19 +37,19 @@
 </header>
 <div id="wrapper">
   <section id="construction">
-          <h1>UX/UI Designer with a passion about the intersection of user research, brand strategy and design.</h1>
+          <h1><heavy>UX/UI Designer</heavy> with a passion about the intersection of user research, brand strategy and design.</h1>
           <h2>Portfolio Coming <strong>Soon</strong></h2>
               <p>I’ll be back soon with new work to share! In the meantime, if you'd like to chat or work together, feel free to contact me <a href="mailto:#">here</a>.</p>
             <!--  <p>&mdash; Erika</p>-->
 </section>
 </div>
-<!--
+
   <footer>
     <a href="https://twitter.com/erikalam_"><img src="icons/tw.svg" alt="Twitter Logo" class="social-icon" target="_blank"></a>
     <a href="https://instagram.com/photoekl"><img src="icons/ig.svg" alt="ig Logo" class="social-icon" target="_blank"></a>
     <p>&copy; 2018 Erika Lam</p>
   </footer>
--->
+
 
 </body>
 
