--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-
-      <link rel="stylesheet" href="CSS/style.css">
-      <link rel="stylesheet" href="CSS/animate.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
   <!--
