--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Erika Lam – Designer & Strategist</title>
 <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animate.css">
