updated link to correct url

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Hi, I’m Erika. I'm a passionate and curious experience designer based in New Y
 I'm currently working as a <b>UX/UI Designer</b> @ <a href="https://pulsedigital.io" target="_blank">Pulse Digital</a> where we build out custom analytic web-based dashboards for clients in the biotech and pharmaceutical industries by utilizing insights to iterate and create seamless user experiences.
 <br>
 <br>
-<a href="mailto:eklaminfo@gmail.com" target="_blank">Contact</a> me if you’d like to view my <a href="https://erikalam.com" target="_blank">portfolio</a> or resume. In the meantime, feel free to learn more about me on Twitter, Instagram or LinkedIn below.
+<a href="mailto:eklaminfo@gmail.com" target="_blank">Contact</a> me if you’d like to view my <a href="https://design.erikalam.com" target="_blank">portfolio</a> or resume. In the meantime, feel free to learn more about me on Twitter, Instagram or LinkedIn below.
 </p>
 </div>
 </section>
