--- a/index.html
+++ b/index.html
@@ -20,18 +20,17 @@
 </header>-->
 <div class="wrapper">
   <ul class="bg-bubbles">
+      <li>"If the user can’t use it, it doesn’t work.”</li>
+      <li></li>
+      <li>“People ignore design that ignores people.”</li>
       <li></li>
       <li></li>
       <li></li>
       <li></li>
       <li></li>
       <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-<div id="wrapper">
-<section>
+      <li>“If you think good design is expensive, you should look at the cost of bad design.”</li>
+<section id="wrapper">
   <div class="item animated fadeInLeft">
     <h1>Erika Lam</h1>
     <h2>UX/UI DESIGNER</h2>
@@ -47,8 +46,33 @@ I'm currently working as a <b>UX/UI Designer</b> @ <a href="https://pulsedigital
 <br>
 <a href="mailto:eklaminfo@gmail.com" target="_blank">Contact</a> me if you’d like to view my <a href="https://design.erikalam.com" target="_blank">portfolio</a> or resume. In the meantime, feel free to learn more about me on Twitter, Instagram or LinkedIn below.
 </p>
-</div>
-</section>
+<!--
+<style type="text/css" media="screen">
+  .gr_grid_container {
+    /* customize grid container div here. eg: width: 500px; */
+  }
+
+  .gr_grid_book_container {
+    /* customize book cover container div here */
+    float: left;
+    width: 39px;
+    height: 60px;
+    padding: 0px 0px;
+    overflow: hidden;
+  }
+</style>
+<div id="gr_grid_widget_1517190753">
+  <!-- Show static html as a placeholder in case js is not enabled - javascript include will override this if things work -->
+  <!--<h3 style="text-decoration: none;" rel="nofollow">My favorite Design and Psychology Books</a>
+</h3>
+<div class="gr_grid_container">
+<div class="gr_grid_book_container"><a title="Mobile First" rel="nofollow" href="https://www.goodreads.com/book/show/12910749-mobile-first"><img alt="Mobile First" border="0" src="https://images.gr-assets.com/books/1318982714s/12910749.jpg" /></a></div>
+<div class="gr_grid_book_container"><a title="The Hidden Brain: How Our Unconscious Minds Elect Presidents, Control Markets, Wage Wars, and Save Our Lives" rel="nofollow" href="https://www.goodreads.com/book/show/6772529-the-hidden-brain"><img alt="The Hidden Brain: How Our Unconscious Minds Elect Presidents, Control Markets, Wage Wars, and Save Our Lives" border="0" src="https://images.gr-assets.com/books/1442418022s/6772529.jpg" /></a></div>
+<div class="gr_grid_book_container"><a title="Design Is a Job" rel="nofollow" href="https://www.goodreads.com/book/show/13574985-design-is-a-job"><img alt="Design Is a Job" border="0" src="https://images.gr-assets.com/books/1333415533s/13574985.jpg" /></a></div>
+<div class="gr_grid_book_container"><a title="Just Enough Research" rel="nofollow" href="https://www.goodreads.com/book/show/17236175-just-enough-research"><img alt="Just Enough Research" border="0" src="https://images.gr-assets.com/books/1379351795s/17236175.jpg" /></a></div>
+<div class="gr_grid_book_container"><a title="Hooked: How to Build Habit-Forming Products" rel="nofollow" href="https://www.goodreads.com/book/show/22668729-hooked"><img alt="Hooked: How to Build Habit-Forming Products" border="0" src="https://images.gr-assets.com/books/1407112405s/22668729.jpg" /></a></div>
+<div class="gr_grid_book_container"><a title="The Design of Everyday Things" rel="nofollow" href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img alt="The Design of Everyday Things" border="0" src="https://images.gr-assets.com/books/1442460745s/840.jpg" /></a></div>
+</div>-->
 
 <footer>
   <a href="mailto:eklaminfo@gmail.com" target="_blank"><img src="icons/email.svg" alt="email" class="social-icon"></a>
@@ -58,7 +82,7 @@ I'm currently working as a <b>UX/UI Designer</b> @ <a href="https://pulsedigital
   <a href="https://www.linkedin.com/in/eklam/" target="_blank"><img src="icons/linkedin.svg" alt="linkedin Logo" class="social-icon"></a>
   <p>&copy; 2018 Erika Lam</p>
 </footer>
-</div>
+</section>
 </ul>
 </div>
 </body>
