updates to UI and links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="application-name" content="Erika Lam"/>
 
   <meta charset="UTF-8">
-  <title>Erika Lam – Designer & Strategist</title>
+  <title>Erika Lam – UX/UI Designer</title>
 <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -20,16 +20,16 @@
 </header>-->
 <div class="wrapper">
   <ul class="bg-bubbles">
-      <li>"If the user can’t use it, it doesn’t work.”</li>
-      <li></li>
-      <li>“People ignore design that ignores people.”</li>
       <li></li>
       <li></li>
       <li></li>
       <li></li>
       <li></li>
       <li></li>
-      <li>“If you think good design is expensive, you should look at the cost of bad design.”</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
 <section id="wrapper">
   <div class="item animated fadeInLeft">
     <h1>Erika Lam</h1>
@@ -44,7 +44,7 @@ Hi, I’m Erika. I'm a passionate and curious experience designer based in New Y
 I'm currently working as a <b>UX/UI Designer</b> @ <a href="https://pulsedigital.io" target="_blank">Pulse Digital</a> where we build out custom analytic web-based dashboards for clients in the biotech and pharmaceutical industries by utilizing insights to iterate and create seamless user experiences.
 <br>
 <br>
-<a href="mailto:eklaminfo@gmail.com" target="_blank">Contact</a> me if you’d like to view my <a href="https://design.erikalam.com" target="_blank">portfolio</a> or resume. In the meantime, feel free to learn more about me on Twitter, Instagram or LinkedIn below.
+Checkout my <a href="https://design.erikalam.com" target="_blank">design portfolio</a> or <a href="mailto:eklaminfo@gmail.com" target="_blank">contact</a> me to view my resume. In the meantime, feel free to connect with me on Twitter, Dribbble, Instagram or LinkedIn below.
 </p>
 <!--
 <style type="text/css" media="screen">
@@ -75,11 +75,12 @@ I'm currently working as a <b>UX/UI Designer</b> @ <a href="https://pulsedigital
 </div>-->
 
 <footer>
-  <a href="mailto:eklaminfo@gmail.com" target="_blank"><img src="icons/email.svg" alt="email" class="social-icon"></a>
-  <a href="https://twitter.com/erikalam_" target="_blank"><img src="icons/tw.svg" alt="Twitter Logo" class="social-icon"></a>
+  <a href="https://dribbble.com/erikalam" target="_blank"><img src="icons/dribbble.svg" alt="dribbble" class="social-icon"></a>
+  <a href="https://twitter.com/erikalam_" target="_blank"><img src="icons/tw.svg" alt="Twitter" class="social-icon"></a>
   <a href="https://instagram.com/photoekl" target="_blank"><img src="icons/ig.svg" alt="ig Logo" class="social-icon"></a>
   <a href="https://medium.com/@erika.lam" target="_blank"><img src="icons/medium.png" alt="medium Logo" class="social-icon"></a>
   <a href="https://www.linkedin.com/in/eklam/" target="_blank"><img src="icons/linkedin.svg" alt="linkedin Logo" class="social-icon"></a>
+  <a href="mailto:eklaminfo@gmail.com" target="_blank"><img src="icons/email.svg" alt="email" class="social-icon"></a>
   <p>&copy; 2018 Erika Lam</p>
 </footer>
 </section>
