--- a/index.html
+++ b/index.html
@@ -30,22 +30,29 @@
       <li></li>
       <li></li>
       <li></li>
-<section id="wrapper">
+<section class="wrapperContainer">
   <div class="item animated fadeInLeft">
     <h1>Erika Lam</h1>
     <h2>UX/UI DESIGNER</h2>
   </div>
-<br>
 <div class="item animated slideInUp">
 <p>
 Hi, I’m Erika. I'm a passionate and curious experience designer based in New York. I'm constantly drawn to solving complex problems and love taking discoveries from interviews, testing, and research, and translating them into ideas that make for more usable and engaging experiences. I have experience in strategy, product and visual design.
 <br>
 <br>
-I'm currently working as a <b>UX/UI Designer</b> @ <a href="https://pulsedigital.io" target="_blank">Pulse Digital</a> where we build out custom analytic web-based dashboards for clients in the biotech and pharmaceutical industries by utilizing insights to iterate and create seamless user experiences.
+I'm currently working as a <b>UX/UI Designer</b> @ <a href="http://dedhamgroup.com/" target="_blank">The Dedham Group</a>. I work on the <a href="https://pulsedigital.io" target="_blank">Pulse Digital</a> product team where build out custom analytic web-based dashboards for clients in the biotech and pharmaceutical industries by utilizing insights to iterate and create seamless user experiences.
 <br>
 <br>
 Checkout my <a href="https://design.erikalam.com" target="_blank">design portfolio</a> or <a href="mailto:eklaminfo@gmail.com" target="_blank">contact</a> me to view my resume. In the meantime, feel free to connect with me on Twitter, Dribbble, Instagram or LinkedIn below.
 </p>
+<h5>Top Reads</h5>
+<div class="book">
+<a href="https://www.goodreads.com/book/show/12609433-the-power-of-habit?ac=1&from_search=true" target="_blank">The Power of Habit</a>
+<br>
+<a href="https://www.goodreads.com/book/show/22668729-hooked" target="_blank">Hooked: How to Build Habit-Forming Products</a>
+<br>
+<a href="https://www.goodreads.com/book/show/13547180-brain-on-fire?ac=1&from_search=true" target="_blank">Brain on Fire</a>
+</div>
 <!--
 <style type="text/css" media="screen">
   .gr_grid_container {
@@ -73,7 +80,6 @@ Checkout my <a href="https://design.erikalam.com" target="_blank">design portfol
 <div class="gr_grid_book_container"><a title="Hooked: How to Build Habit-Forming Products" rel="nofollow" href="https://www.goodreads.com/book/show/22668729-hooked"><img alt="Hooked: How to Build Habit-Forming Products" border="0" src="https://images.gr-assets.com/books/1407112405s/22668729.jpg" /></a></div>
 <div class="gr_grid_book_container"><a title="The Design of Everyday Things" rel="nofollow" href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img alt="The Design of Everyday Things" border="0" src="https://images.gr-assets.com/books/1442460745s/840.jpg" /></a></div>
 </div>-->
-
 <footer>
   <a href="https://dribbble.com/erikalam" target="_blank"><img src="icons/dribbble.svg" alt="dribbble" class="social-icon"></a>
   <a href="https://twitter.com/erikalam_" target="_blank"><img src="icons/tw.svg" alt="Twitter" class="social-icon"></a>
