--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="application-name" content="Erika Lam"/>
 
   <meta charset="UTF-8">
-  <title>Erika Lam – UX/UI Designer</title>
+  <title>Erika Lam – UI/UX Designer</title>
 <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -40,7 +40,7 @@
 Hi, I’m Erika. I'm a passionate and curious experience designer based in New York. I'm constantly drawn to solving complex problems and love taking discoveries from interviews, testing, and research, and translating them into ideas that make for more usable and engaging experiences. I have experience in strategy, product and visual design.
 <br>
 <br>
-I'm currently working as a <b>UX/UI Designer</b> @ <a href="http://dedhamgroup.com/" target="_blank">The Dedham Group</a>. I work on the <a href="https://pulsedigital.io" target="_blank">Pulse Digital</a> product team where build out custom analytic web-based dashboards for clients in the biotech and pharmaceutical industries by utilizing insights to iterate and create seamless user experiences.
+I'm currently a <b>UI/UX Designer</b> @ <a href="http://panderasystems.com/" target="_blank">Pandera Systems</a>. Using strategic planning and research, I work to artfully blend science and design to create intuitive decision management applications that help clients and organizations improve usage, productivity and performance with large datasets.
 <br>
 <br>
 Checkout my <a href="https://design.erikalam.com" target="_blank">design portfolio</a> or <a href="mailto:eklaminfo@gmail.com" target="_blank">contact</a> me to view my resume. In the meantime, feel free to connect with me on Twitter, Dribbble, Instagram or LinkedIn below.
