--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ Checkout my <a href="https://design.erikalam.com" target="_blank">design portfol
 </div>-->
 <footer>
   <a href="https://dribbble.com/erikalam" target="_blank"><img src="icons/dribbble.svg" alt="dribbble" class="social-icon"></a>
-  <a href="https://twitter.com/erikalam_" target="_blank"><img src="icons/tw.svg" alt="Twitter" class="social-icon"></a>
-  <a href="https://instagram.com/photoekl" target="_blank"><img src="icons/ig.svg" alt="ig Logo" class="social-icon"></a>
+  <a href="https://twitter.com/_erikalam" target="_blank"><img src="icons/tw.svg" alt="Twitter" class="social-icon"></a>
+  <a href="https://instagram.com/_erikalam" target="_blank"><img src="icons/ig.svg" alt="ig Logo" class="social-icon"></a>
   <a href="https://medium.com/@erika.lam" target="_blank"><img src="icons/medium.png" alt="medium Logo" class="social-icon"></a>
   <a href="https://www.linkedin.com/in/eklam/" target="_blank"><img src="icons/linkedin.svg" alt="linkedin Logo" class="social-icon"></a>
   <a href="mailto:eklaminfo@gmail.com" target="_blank"><img src="icons/email.svg" alt="email" class="social-icon"></a>
