--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <meta charset="UTF-8">
   <title>Erika Lam – UI/UX Designer</title>
-<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Playfair+Display:900" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600,700' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -37,7 +37,7 @@
   </div>
 <div class="item animated slideInUp">
 <p>
-Hi, I’m Erika. I'm a passionate and curious experience designer based in New York. I'm constantly drawn to solving complex problems and love taking discoveries from interviews, testing, and research, and translating them into ideas that make for more usable and engaging experiences. I have experience in strategy, product and visual design.
+Hi, I’m Erika. I'm a passionate and curious experience designer based in Orlando, FL. I'm constantly drawn to solving complex problems and love taking discoveries from interviews, testing, and research, and translating them into ideas that make for more usable and engaging experiences. I have experience in strategy, product and visual design.
 <br>
 <br>
 I'm currently a <b>UI/UX Designer</b> @ <a href="http://panderasystems.com/" target="_blank">Pandera Systems</a>. Using strategic planning and research, I work to artfully blend science and design to create intuitive decision management applications that help clients and organizations improve usage, productivity and performance with large datasets.
