--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta charset="UTF-8">
   <title>Erika Lam – UI/UX Designer</title>
-<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600,700' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;600&family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -32,26 +32,73 @@
       <li></li>
 <section class="wrapperContainer">
   <div class="item animated fadeInLeft">
-    <h1>Erika Lam</h1>
-    <h2>UX/UI DESIGNER</h2>
+    <h1>Erika Lam Suarez</h1>
+    <h4>UX/UI DESIGNER</h4>
   </div>
 <div class="item animated slideInUp">
+<h2>A personable and curious user experience designer constantly drawn to solving complex problems.</h2>
+<br>
+<h3>My Process</h3>
 <p>
-Hi, I’m Erika. I'm a passionate and curious experience designer based in Orlando, FL. I'm constantly drawn to solving complex problems and love taking discoveries from interviews, testing, and research, and translating them into ideas that make for more usable and engaging experiences. I have experience in strategy, product and visual design.
+<mark>RESEARCH</mark>
+<br>
+user interviews; usability testing; user surveys; competitive/comparative analysis; market research; heuristic analysis; contextual inquiries
+<br><br>
+<mark>EXPLORATION</mark>
+<br>
+storyboarding; information architecture; site mapping; user flows; personas; affinity mapping; MoSCoW method
 <br>
 <br>
-I'm currently a <b>UI/UX Designer</b> @ <a href="http://panderasystems.com/" target="_blank">Pandera Systems</a>. Using strategic planning and research, I work to artfully blend science and design to create intuitive decision management applications that help clients and organizations improve usage, productivity and performance with large datasets.
+<mark>DESIGN</mark>
+<br>
+sketching; paper prototyping; wireframing; low and high fidelity mockups; style guides; componentization
 <br>
 <br>
-Checkout my <a href="https://design.erikalam.com" target="_blank">design portfolio</a> or <a href="mailto:eklaminfo@gmail.com" target="_blank">contact</a> me to view my resume. In the meantime, feel free to connect with me on Twitter, Dribbble, Instagram or LinkedIn below.
+<mark>TESTING</mark>
+<br>
+clickable interactive prototypes; usability testing; a/b testing
+<br>
+<i>(*continuously test and iterate solutions along the way based off user feedback)</i>
+<br>
 </p>
+<h3>My Work</h3>
+<p>
+You can view some of my visual design work at <a href="http://erikalam.dribbble.com/" target="_blank">erikalam.dribbble.com</a>.
+<br>
+<br>
+Or you can read some case studies of projects I've worked on at <a href="https://design.erikalam.com" target="_blank">design.erikalam.com</a>.
+<br><i>(*will require you to request access due to client confidentiality)</i>
+<br>
+<h3>About Me</h3>
+<p>
+I’m an UX/UI designer based in Orlando, FL with experience and passion in working collaboratively with others to take broad conceptual ideas and translate them into highly usable and engaging experiences.
+<br>
+<br>
+Prior to transitioning to design in 2016, I worked in the advertising industry creating digital ad campaigns for multicultural audiences. This experience allowed me to gain a deeper understanding of the complexity and different needs of various users; and has led to my passion in creating usable products with inclusivity in mind. I'm drawn to solving complex problems and thrive on taking discoveries from interviews, testing, and research, to translate them solutions with a positive impact.
+ <br>
+<br>
+When I’m not designing, I spend my time <a href="https://erikalamphoto.wordpress.com/" target="_blank">taking photos</a>, reading, cooking or being active outdoors.
+<br>
 <h5>Top Reads</h5>
 <div class="book">
 <a href="https://www.goodreads.com/book/show/12609433-the-power-of-habit?ac=1&from_search=true" target="_blank">The Power of Habit</a>
 <br>
 <a href="https://www.goodreads.com/book/show/22668729-hooked" target="_blank">Hooked: How to Build Habit-Forming Products</a>
 <br>
-<a href="https://www.goodreads.com/book/show/13547180-brain-on-fire?ac=1&from_search=true" target="_blank">Brain on Fire</a>
+<a href="https://www.goodreads.com/book/show/34890015-factfulness" target="_blank">Factfulness: Ten Reasons We're Wrong About the World – and Why Things Are Better Than You Think</a></div>
+<br>
+<h5>Listening To</h5>
+<div class="book">
+<a href="https://podcasts.apple.com/us/podcast/no-stupid-questions/id1510056899" target="_blank">No Stupid Questions</a>
+<br>
+<a href="https://www.npr.org/podcasts/510312/codeswitch" target="_blank">Code Switch</a>
+<br>
+<a href="https://www.userinterviews.com/podcast" target="_blank">Awkward Silences</a></div>
+<br>
+<br>
+<h3>Contact</h3>
+<p>View or download my resume <a href="https://drive.google.com/file/d/1pux_IBvbgOq_ubJUZ2MuxkpmX5kT21-4/view?usp=sharing" target="_blank">here</a>, or contact me at <a href="mailto:eklaminfo@gmail.com">eklaminfo@gmail.com</a></p>
+<br>
 </div>
 <!--
 <style type="text/css" media="screen">
@@ -87,7 +134,7 @@ Checkout my <a href="https://design.erikalam.com" target="_blank">design portfol
   <a href="https://medium.com/@erika.lam" target="_blank"><img src="icons/medium.png" alt="medium Logo" class="social-icon"></a>
   <a href="https://www.linkedin.com/in/eklam/" target="_blank"><img src="icons/linkedin.svg" alt="linkedin Logo" class="social-icon"></a>
   <a href="mailto:eklaminfo@gmail.com" target="_blank"><img src="icons/email.svg" alt="email" class="social-icon"></a>
-  <p>&copy; 2018 Erika Lam</p>
+  <p>&copy; 2020 Erika Lam Suarez</p>
 </footer>
 </section>
 </ul>
