--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Or you can read some case studies of projects I've worked on at <a href="https:/
 I’m an UX/UI designer based in Orlando, FL with experience and passion in working collaboratively with others to take broad conceptual ideas and translate them into highly usable and engaging experiences.
 <br>
 <br>
-Prior to transitioning to design in 2016, I worked in the advertising industry creating digital ad campaigns for multicultural audiences. This experience allowed me to gain a deeper understanding of the complexity and different needs of various users; and has led to my passion in creating usable products with inclusivity in mind. I'm drawn to solving complex problems and thrive on taking discoveries from interviews, testing, and research, to translate them solutions with a positive impact.
+Prior to transitioning to design in 2016, I worked in the advertising industry creating digital ad campaigns for multicultural audiences. This experience allowed me to gain a deeper understanding of the complexity and different needs of various users; and has led to my passion in creating usable products with inclusivity in mind. I'm drawn to solving complex problems and thrive on taking discoveries from interviews, testing, and research, to translate them into solutions with a positive impact.
  <br>
 <br>
 When I’m not designing, I spend my time <a href="https://erikalamphoto.wordpress.com/" target="_blank">taking photos</a>, reading, cooking or being active outdoors.
@@ -97,7 +97,7 @@ When I’m not designing, I spend my time <a href="https://erikalamphoto.wordpre
 <br>
 <br>
 <h3>Contact</h3>
-<p>View or download my resume <a href="https://drive.google.com/file/d/1pux_IBvbgOq_ubJUZ2MuxkpmX5kT21-4/view?usp=sharing" target="_blank">here</a>, or contact me at <a href="mailto:eklaminfo@gmail.com">eklaminfo@gmail.com</a></p>
+<p>View my resume <a href="https://drive.google.com/file/d/1pux_IBvbgOq_ubJUZ2MuxkpmX5kT21-4/view?usp=sharing" target="_blank">here</a> or contact me at <a href="mailto:eklaminfo@gmail.com">eklaminfo@gmail.com</a></p>
 <br>
 </div>
 <!--
