--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
 <br>
 <h3>My Process</h3>
 <p>
-<mark>RESEARCH</mark>
+RESEARCH
 <br>
 user interviews; usability testing; user surveys; competitive/comparative analysis; market research; heuristic analysis; contextual inquiries
 <br><br>
-<mark>EXPLORATION</mark>
+EXPLORATION
 <br>
 storyboarding; information architecture; site mapping; user flows; personas; affinity mapping; MoSCoW method
 <br>
 <br>
-<mark>DESIGN</mark>
+DESIGN
 <br>
 sketching; paper prototyping; wireframing; low and high fidelity mockups; style guides; componentization
 <br>
 <br>
-<mark>TESTING</mark>
+TESTING
 <br>
 clickable interactive prototypes; usability testing; a/b testing
 <br>
@@ -71,7 +71,7 @@ Or you can read some case studies of projects I've worked on at <a href="https:/
 <br>
 <h3>About Me</h3>
 <p>
-I’m an UX/UI designer based in Orlando, FL with experience and passion in working collaboratively with others to take broad conceptual ideas and translate them into highly usable and engaging experiences.
+I’m an UX/UI designer based in Orlando, Florida with experience and passion in working collaboratively with others to take broad conceptual ideas and translate them into highly usable and engaging experiences.
 <br>
 <br>
 Prior to transitioning to design in 2016, I worked in the advertising industry creating digital ad campaigns for multicultural audiences. This experience allowed me to gain a deeper understanding of the complexity and different needs of various users; and has led to my passion in creating usable products with inclusivity in mind. I'm drawn to solving complex problems and thrive on taking discoveries from interviews, testing, and research, to translate them into solutions with a positive impact.
