Updated portfolio wording

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="application-name" content="Erika Lam"/>
 
   <meta charset="UTF-8">
-  <title>Erika Lam – UI/UX Designer</title>
+  <title>Erika Lam – UX Designer</title>
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;600&family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -33,37 +33,38 @@
 <section class="wrapperContainer">
   <div class="item animated fadeInLeft">
     <h1>Erika Lam Suarez</h1>
-    <h4>UX/UI DESIGNER</h4>
+    <h4>UX DESIGNER</h4>
   </div>
 <div class="item animated slideInUp">
-<h2>A personable and curious user experience designer constantly drawn to solving complex problems.</h2>
+<h2>A personable and curious user experience designer drawn to work that centers people, care, and real-world impact.</h2>
 <br>
 <h3>My Process</h3>
 <p>
-RESEARCH
+DISCOVERY
 <br>
-user interviews; usability testing; user surveys; competitive/comparative analysis; market research; heuristic analysis; contextual inquiries
+user interviews; ux aduits; usability testing; user surveys; competitive/comparative analysis; market research; heuristic analysis; contextual inquiries
 <br><br>
 EXPLORATION
 <br>
-storyboarding; information architecture; site mapping; user flows; personas; affinity mapping; MoSCoW method
+problem statements; storyboarding; information architecture; site mapping; user flows; personas; affinity mapping; MoSCoW method
 <br>
 <br>
 DESIGN
 <br>
-sketching; paper prototyping; wireframing; low and high fidelity mockups; style guides; componentization
+sketching; prototyping; wireframing; low and high fidelity mockups; style guides; componentization; prototyping; specs for dev handoff
 <br>
 <br>
 TESTING
 <br>
-clickable interactive prototypes; usability testing; a/b testing
+clickable interactive prototypes; usability testing scipts; affinity mapping; insight analysis
 <br>
 <i>(*continuously test and iterate solutions along the way based off user feedback)</i>
 <br>
 </p>
 <h3>My Work</h3>
 <p>
-You can view some of my visual design work at <a href="http://erikalam.dribbble.com/" target="_blank">erikalam.dribbble.com</a>.
+You can explore selected case studies of projects I’ve worked on at <a href="https://design.erikalam.com" target="_blank">design.erikalam.com</a>.
+<br><i>(Access available upon request due to client confidentiality.)</i>
 <br>
 <br>
 Or you can read some case studies of projects I've worked on at <a href="https://design.erikalam.com" target="_blank">design.erikalam.com</a>.
@@ -71,13 +72,13 @@ Or you can read some case studies of projects I've worked on at <a href="https:/
 <br>
 <h3>About Me</h3>
 <p>
-I’m an UX/UI designer based in Orlando, Florida with experience and passion in working collaboratively with others to take broad conceptual ideas and translate them into highly usable and engaging experiences.
+I’m a UX designer drawn to work that centers people, care, and real-world impact. I enjoy collaborating closely with others to make sense of complexity and design experiences that feel thoughtful, inclusive, and grounded in real needs.
 <br>
 <br>
-Prior to transitioning to design in 2016, I worked in the advertising industry creating digital ad campaigns for multicultural audiences. This experience allowed me to gain a deeper understanding of the complexity and different needs of various users; and has led to my passion in creating usable products with inclusivity in mind. I'm drawn to solving complex problems and thrive on taking discoveries from interviews, testing, and research, to translate them into solutions with a positive impact.
- <br>
+In recent years, I’ve focused on social impact work, contributing to projects that support well-being and access through research-driven design and early-stage problem solving.
 <br>
-When I’m not designing, I spend my time <a href="https://erikalamphoto.wordpress.com/" target="_blank">taking photos</a>, reading, cooking or being active outdoors.
+<br>
+Outside of design, I enjoy dance, yoga, making art, and spending time with my family — practices that help me stay present and grounded.
 <br>
 <h5>Top Reads</h5>
 <div class="book">
@@ -128,13 +129,9 @@ When I’m not designing, I spend my time <a href="https://erikalamphoto.wordpre
 <div class="gr_grid_book_container"><a title="The Design of Everyday Things" rel="nofollow" href="https://www.goodreads.com/book/show/840.The_Design_of_Everyday_Things"><img alt="The Design of Everyday Things" border="0" src="https://images.gr-assets.com/books/1442460745s/840.jpg" /></a></div>
 </div>-->
 <footer>
-  <a href="https://dribbble.com/erikalam" target="_blank"><img src="icons/dribbble.svg" alt="dribbble" class="social-icon"></a>
-  <a href="https://twitter.com/_erikalam" target="_blank"><img src="icons/tw.svg" alt="Twitter" class="social-icon"></a>
-  <a href="https://instagram.com/_erikalam" target="_blank"><img src="icons/ig.svg" alt="ig Logo" class="social-icon"></a>
-  <a href="https://medium.com/@erika.lam" target="_blank"><img src="icons/medium.png" alt="medium Logo" class="social-icon"></a>
   <a href="https://www.linkedin.com/in/eklam/" target="_blank"><img src="icons/linkedin.svg" alt="linkedin Logo" class="social-icon"></a>
   <a href="mailto:eklaminfo@gmail.com" target="_blank"><img src="icons/email.svg" alt="email" class="social-icon"></a>
-  <p>&copy; 2020 Erika Lam Suarez</p>
+  <p>&copy; 2026 Erika Lam Suarez</p>
 </footer>
 </section>
 </ul>
