--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p>
 DISCOVERY
 <br>
-user interviews; ux aduits; usability testing; user surveys; competitive/comparative analysis; market research; heuristic analysis; contextual inquiries
+user interviews; ux audits; usability testing; user surveys; competitive/comparative analysis; market research; heuristic analysis; contextual inquiries
 <br><br>
 EXPLORATION
 <br>
