--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h4>UX DESIGNER</h4>
   </div>
 <div class="item animated slideInUp">
-<h2>A personable and curious user experience designer drawn to work that centers people, care, and real-world impact.</h2>
+<h2>A curious UX designer who brings a holistic lens to complex systems, focused on building products that expand access and real-world impact.</h2>
 <br>
 <h3>My Process</h3>
 <p>
