--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@ You can explore selected case studies of projects I’ve worked on at <a href="h
 <br>
 <h3>About Me</h3>
 <p>
-I’m a UX designer drawn to work that centers people, care, and real-world impact. I enjoy collaborating closely with others to make sense of complexity and design experiences that feel thoughtful, inclusive, and grounded in real needs.
+I’m a senior UX designer who works across strategy, systems thinking, and hands-on design to build products that have real-world impact. I’m especially drawn to work where design decisions meaningfully affect people’s access to education, opportunity, and support — not just engagement metrics or growth for growth’s sake.
 <br>
 <br>
-In recent years, I’ve focused on social impact work, contributing to projects that support well-being and access through research-driven design and early-stage problem solving.
+Over the years, I’ve found myself increasingly motivated by projects that center care, equity, and long-term outcomes, particularly for communities who are often underserved by technology due to structural barriers. I thrive in environments where design is used thoughtfully and am most energized when partnering closely with product and engineering to create clarity, coherence, and intention — especially in early-stage or ambiguous problem spaces.
 <br>
 <br>
 Outside of design, I enjoy dance, yoga, making art, and spending time with my family — practices that help me stay present and grounded.
